Update Basic_practice python (2).ipynb

--- a/Basic_practice python (2).ipynb
+++ b/Basic_practice python (2).ipynb
@@ -665,9 +665,11 @@
    "id": "28eb0e8f",
    "metadata": {},
    "source": [
-    "# 26. Create a list Named myList that has three elements\n",
+    " 26. Create a list Named myList that has three elements\n",
     "1.The integer 3\n",
+
     "2.The string \"Element number two\"\n",
+
     "3.Another list[\"Last\",\"Element\"]\n",
     "\n",
     "in that order"
