Update Basic_practice python (2).ipynb

--- a/Basic_practice python (2).ipynb
+++ b/Basic_practice python (2).ipynb
@@ -720,7 +720,7 @@
     }
    ],
    "source": [
-    "# 28. modify th elist element of this list so that its value  is 16. print the modified list so you know the operation was performed successully.\n",
+    " 28. modify th elist element of this list so that its value  is 16. print the modified list so you know the operation was performed successully.\n",
     "listToModify=[\"a\",\"b\",\"sixteen\"]\n",
     "listToModify[-1] = 16\n",
     "print(listToModify)"
