--- a/Basic_practice python (2).ipynb
+++ b/Basic_practice python (2).ipynb
@@ -665,7 +665,7 @@
    "id": "28eb0e8f",
    "metadata": {},
    "source": [
-    " 26. Create a list Named myList that has three elements\n",
+    " ### 26. Create a list Named myList that has three elements\n",
     "1.The integer 3\n",
 
     "2.The string \"Element number two\"\n",
