--- a/Basic_practice python (2).ipynb
+++ b/Basic_practice python (2).ipynb
@@ -700,7 +700,7 @@
     }
    ],
    "source": [
-    "### 27. print the third element of the following list\n",
+    "# 27. print the third element of the following list\n",
     "l=[1,2,3,4,5,6,7,8,9]\n",
     "print(l[2])"
    ]
